--- a/css/price.css
+++ b/css/price.css
@@ -32,6 +32,12 @@ h1 {
     font-weight: 700;
     font-family: "Roboto Slab";
 }
+header{
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+}
+.header-info{
+    margin-bottom: 40px;
+}
 
 .description p {
 margin-bottom: 25px;
@@ -43,7 +49,7 @@ max-width: 85%;
 }
 
 table {
-    margin-bottom: 27px;
+
    overflow: hidden;
    min-width: 920px;
     width: 100%;
@@ -53,7 +59,8 @@ table {
 }
 .wrapp{
     width: 100%;
-    overflow-x: scroll;
+    margin-bottom: 27px;
+    overflow-x: auto;
 }
 
 
@@ -181,4 +188,21 @@ figure{
    width: 100%;
   
 }
+@media screen and (min-width:600px) {
+    figure{
+        width: 40%;
+    }
+}
+@media screen and (min-width:1024px) {
+    figure{
+        width: 20%;
+    }
+}
+
+
+
+
+
+
+
 
