--- a/css/general.css
+++ b/css/general.css
@@ -105,7 +105,7 @@ background-color: #fd8300;
     left: 0;
     transform: rotate(90deg);  
 } */
-.clicked:hover{
+.clicked{
     transform: rotate(180deg);
 }
 .onclick{
@@ -115,8 +115,8 @@ background-color: #fd8300;
     align-items: start;
     top: 100%;
     left: 0;
-    padding: 20px 15px;
-    width: 70%;
+    padding: 20px 15px 0 15px;
+    width: 80%;
     background-color: #2e2e73;
     z-index: 2;
     transition: .4s;
@@ -124,6 +124,9 @@ background-color: #fd8300;
     border-bottom: 3px #1f1f56 solid;
     border-right: 3px #1f1f56 solid;
     
+}
+.onclick li{
+    margin-bottom: 20px;
 }
 .navigation{
     transition: .3s;
@@ -175,18 +178,15 @@ a.inst {
     background-position: -37px -24px;
 }
 
-header{
-    box-shadow: 0 0 5px rgba(0,0,0,0.1);
-}
 
 .header-info{
     display: flex;
     flex-direction: column;
     align-items: center;
 text-align: center;
-margin-bottom: 40px;
 padding: 30px 0;
 }
+
 
 .header-info img{
     margin-bottom: 20px;
@@ -324,18 +324,12 @@ a.skype:before {
 }
 
 @media screen and (min-width:600px) {
-    .burger{
-        display: none;
-    }
-    .navigation{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+    
     .header-info{
         display: flex;
         flex-direction: row;
         column-gap: 30px;
+        align-items: start;
         justify-content: center;
         flex-wrap: wrap;
 
@@ -344,6 +338,9 @@ a.skype:before {
         display: flex;
         flex-direction: row;
 
+    }
+    .email{
+        text-align: left;
     }
     .mainmenu{
         display: flex;
@@ -356,6 +353,18 @@ a.skype:before {
     }
    
 }
+@media screen and (min-width:720px) {
+
+    .burger{
+        display: none;
+    }
+    .navigation{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
 @media screen and (min-width:1024px) {
    
   
