--- a/css/general.css
+++ b/css/general.css
@@ -25,14 +25,107 @@ sup {
     font-size: 0.6em;
 }
 
-nav {
-    position: relative;
-    padding: 20px 0;
+nav{
+    text-align: center;
+    padding: 0;
+    padding: 25px;
     background-color: #1f1f56;
+
+}
+
+
+.socials{
+    display: flex;
+    justify-content: space-around;
+    gap: 22px;
 }
 .navigation{
     display: none;
 }
+.burger{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 10px;
+    left: 20px;
+    transition: .5s;
+}
+span{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0, -50%);
+    width: 100%;
+    height: 7px;
+    background-color: #fff;
+    border-radius: 2px;
+}
+.burger::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 7px;
+    background-color: #fff;
+    border-radius: 2px;
+
+}
+.burger::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 7px;
+    background-color: #fff;
+    border-radius: 2px;
+
+}
+.touched{
+    position: absolute;
+    top: 13px;
+    left: inherit;
+    right: 15px;
+    transform: rotate(180deg);
+    transition: .5s;
+}
+.touched span{
+    width: 120%;
+    transform: rotate(45deg);
+}
+
+.touched::after{
+
+    width: 120%;
+    top: 15px;
+    transform: rotate(-45deg);
+}
+.touched::before{
+    display: none;
+}
+
+.opened{
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 75%;
+display: flex;
+flex-direction: column;
+padding: 15px;
+border-radius: 0 0 10px 10px;
+background-color: #242475;
+
+} 
+
+nav li{
+    margin-bottom: 12px;
+}
+.mainmenu{
+    margin-bottom: 32px;
+}
+
 .mainmenu li a {
     color: #b1b1d2;
     font-size: 14px;
@@ -54,90 +147,12 @@ nav {
     column-gap: 30px;
         flex-wrap: wrap;
 }
-.burger{
-    position: relative;
-    width: 30px;
-    height: 30px;
-    transition: .3s;
-   
-}
-.burger span{
-position: absolute;
-top: 50%;
-left: 0;
-transform: translate(0, -50%);
-width: 100%;
-height: 6px;
-background-color: #fd8300;
-}
- .burger::before{
-    content: "";
-    position: absolute;
-    top: 0px;
-    left: 0;
-    height: 6px;
-    width: 100%;
-    background-color: #fd8300;
-    transition: .5s;
-}
-.burger::after{
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 6px;
-    width: 100%;
-    background-color: #fd8300;
-    transition: .5s;
-} 
-
-/* .clicked:hover span{
-    transform: rotate(90deg);
-}
-.clicked:hover::before{
-    top: 50%;
-    left: 0;
-    transform: rotate(90deg);
-   
-}
-.clicked:hover::after{
-    top: 50%;
-    left: 0;
-    transform: rotate(90deg);  
-} */
-.clicked{
-    transform: rotate(180deg);
-}
-.onclick{
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-    top: 100%;
-    left: 0;
-    padding: 20px 15px 0 15px;
-    width: 80%;
-    background-color: #2e2e73;
-    z-index: 2;
-    transition: .4s;
-    border-radius: 0 0 10px 0;
-    border-bottom: 3px #1f1f56 solid;
-    border-right: 3px #1f1f56 solid;
-    
-}
-.onclick li{
-    margin-bottom: 20px;
-}
-.navigation{
-    transition: .3s;
-}
-
 
 .socials {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 12px;
+    
+    justify-content: center;
+    column-gap: 32px;
     align-items: center;
 }
 
@@ -324,15 +339,19 @@ a.skype:before {
 }
 
 @media screen and (min-width:600px) {
-    
-
     .email{
         text-align: left;
+    }
+    .opened{
+        width: 50%;
     }
    
    
 }
 @media screen and (min-width:720px) {
+    .navigationbottom{
+        justify-content: space-between;
+    }
     .header-info{
         display: flex;
         flex-direction: row;
@@ -342,18 +361,19 @@ a.skype:before {
         flex-wrap: wrap;
 
     }
-    .socials{
-        display: flex;
-        flex-direction: row;
+    
+}
 
+@media screen and (min-width:1024px) {
+    nav li{
+        margin-bottom: 0;
     }
     .mainmenu{
         display: flex;
         gap: 25px;
+        margin: 0;
     }
     .socials{
-        display: flex;
-        flex-direction: row;
         gap: 22px;
     }
     .burger{
@@ -364,9 +384,6 @@ a.skype:before {
         justify-content: space-between;
         align-items: center;
     }
-}
-
-@media screen and (min-width:1024px) {
    
   
     .header-info{
