--- a/css/price.css
+++ b/css/price.css
@@ -153,6 +153,22 @@ figure{
     width: 100%;
 }
 
+figure {
+    position: relative;
+}
+
+figure a {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+figure a:hover~h2 {
+    text-decoration: underline;
+}
+
+
 .examples {
     display: flex;
    justify-content: space-between; 
