--- a/css/contacts.css
+++ b/css/contacts.css
@@ -79,7 +79,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    align-items:flex-start
+    align-items: flex-start;
 }
 
 .map {
@@ -87,7 +87,7 @@ h1 {
 
     /* width: 49%; */
     width: 100%;
-    height: 460px;
+    height: 470px;
     display: flex;
     align-items: flex-start
 }
@@ -165,12 +165,10 @@ textarea {
 }
 
 .button+label {
-    width: 100%;
     display: inline-block;
-    margin-bottom: 10px;
+    width: 100%;
     padding: 14px 30px;
     font-size: 14px;
-    line-height: 24px;
     color: #fff;
     font-weight: bold;
     font-family: "Arial";
@@ -189,26 +187,28 @@ border: 1.5px #fd8300 solid;
 .last{
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
+    gap: 10px;
 }
 
 .checkbox {
-    position: relative;
     display: flex;
     align-items: center;
     column-gap: 10px;
    text-align: center;
     width: 100%;
+    margin-bottom: 20px;
 
 }
 .checkbox label{
+    position: relative;
     font-size: 13px;
 line-height: 21px;
 color: #666;
 font-family: "Arial";
 }
 
-.checkbox input {
+.check{
+    position: relative;
     appearance: none;
     margin: 0;
     padding: 0;
@@ -227,11 +227,11 @@ font-family: "Arial";
 
 
 
-.checkbox input:checked::before {
+.check:checked::before {
     content: "";
     position: absolute;
-    top: 6px;
-    left: 4px;
+    top: 1px;
+    left: 3px;
     width: 5px;
     height: 7px;
     border: 2px #222258 solid;
@@ -240,6 +240,7 @@ font-family: "Arial";
     rotate: 45deg;
 }
 @media screen and (min-width:600px) {
+  
     form {
          width: 48%;
     }
@@ -247,12 +248,7 @@ font-family: "Arial";
     width: 49%;
     
     }
-
-    .last{
-        display: block;
-    }
- 
-    
+  
 }
 @media screen and (min-width:1024px) {
     
@@ -264,9 +260,11 @@ font-family: "Arial";
     flex-wrap: nowrap;
 }
 .last{
-    display: flex;
-    flex-direction: row;
-    text-align: center;
+ display: flex;
+ flex-direction: row;
+}
+.last p{
+width: auto;
 }
 .button+label{
     margin: 0;
@@ -275,6 +273,13 @@ font-family: "Arial";
 .checkbox{
     width: 40%;
     text-align: left;
+    margin-bottom: 0;
 }
  
+}
+
+@media screen and (min-width:1200px) {
+ .checkbox{
+    margin-left: 20px;
+ }
 }
