--- a/css/general.css
+++ b/css/general.css
@@ -106,6 +106,7 @@ span {
 .opened {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 20px 15px;
     width: 75%;
     position: absolute;
@@ -116,7 +117,6 @@ span {
     border-radius: 0 0 10px 10px;
     background-color: #242475;
     z-index: 1;
-
 }
 
 @keyframes slide {
@@ -165,13 +165,16 @@ nav li {
 }
 
 .socials {
+    max-width: 50%;
     display: flex;
     text-align: center;
+    justify-content: space-between;
     column-gap: 32px;
 }
 .socials li{
     display: flex;
     align-items: center;
+
 }
 
 
